// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapseMenuBody render 1`] = `
<div
  className="d-flex flex-column shadow-sm nav-small-menu"
>
  <Button
    as="a"
    href="/"
    variant="inverse-primary"
  >
    Courses
  </Button>
  <Button
    as="a"
    href="undefined/dashboard/programs"
    variant="inverse-primary"
  >
    Programs
  </Button>
  <Button
    as="a"
    href="undefined/courseSearchUrl"
    onClick={[MockFunction findCoursesNavDropdownClicked("undefined/courseSearchUrl")]}
    variant="inverse-primary"
  >
    Discover New
  </Button>
  <Button
    as="a"
    variant="inverse-primary"
  >
    Help
  </Button>
  <Button
    as="a"
    href="url"
    variant="inverse-primary"
  >
    Dashboard
  </Button>
  <Button
    as="a"
    href="undefined/u/username"
    variant="inverse-primary"
  >
    Profile
  </Button>
  <Button
    as="a"
    href="undefined/account/settings"
    variant="inverse-primary"
  >
    Account
  </Button>
  <Button
    as="a"
    href="http://account-profile-url.test"
    variant="inverse-primary"
  >
    Orders & Subscriptions
  </Button>
  <Button
    as="a"
    variant="inverse-primary"
  >
    Sign Out
  </Button>
</div>
`;

exports[`CollapseMenuBody render empty if not open 1`] = `""`;

exports[`CollapseMenuBody render unauthenticated 1`] = `
<div
  className="d-flex flex-column shadow-sm nav-small-menu"
>
  <Button
    as="a"
    href="/"
    variant="inverse-primary"
  >
    Courses
  </Button>
  <Button
    as="a"
    href="undefined/dashboard/programs"
    variant="inverse-primary"
  >
    Programs
  </Button>
  <Button
    as="a"
    href="undefined/courseSearchUrl"
    onClick={[MockFunction findCoursesNavDropdownClicked("undefined/courseSearchUrl")]}
    variant="inverse-primary"
  >
    Discover New
  </Button>
  <Button
    as="a"
    variant="inverse-primary"
  >
    Help
  </Button>
</div>
`;
